force-app/main/default/objects/Combination_Unit_Field_Configuration__mdt/Combination_Unit_Field_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Units lookup for Case and related objects</description>
    <label>Combination Unit Field Configuration</label>
    <pluralLabel>Combination Unit Field Configurations</pluralLabel>
</CustomObject>