force-app/main/default/objects/Combination_Unit_Field_Configuration__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field where user enters a value</description>
    <inlineHelpText>API name of the field where user enters a value</inlineHelpText>
    <label>Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>