force-app/main/default/objects/Combination_Unit_Field_Configuration__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Holds object API name</description>
    <inlineHelpText>Holds object API name</inlineHelpText>
    <label>Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>