force-app/main/default/objects/Combination_Unit_Field_Configuration__mdt/fields/Reference_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field_API_Name__c</fullName>
    <description>API name of the field where the unit is saved in the record</description>
    <inlineHelpText>API name of the field where the unit is saved in the record</inlineHelpText>
    <label>Reference Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>