force-app/main/default/objects/Combination_Unit_Field_Configuration__mdt/fields/Reference_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object_API_Name__c</fullName>
    <description>Reference object API name to fetch unit field values</description>
    <inlineHelpText>Reference object API name to fetch unit field values</inlineHelpText>
    <label>Reference Object API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>